tests/analyzer/errors/unknown_module.rv
use std.blender
use ctd.blender

fn main() {
    {
        use std.time
    }

    print clock()
}